# Calculator

./: .travis.yml  CMakeLists.txt
Example/: CMakeLists.txt  main.cpp
Include/: calculator.hpp
Tests/: CMakeLists.txt
Tests/Source/: init.cpp
